--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 0 0 20px rgba(255, 255, 255, 0.5),
                 0 0 40px rgba(255, 105, 180, 0.4),
                 3px 3px 10px rgba(0, 0, 0, 0.3);
-            animation: slide 15s linear infinite;
+            animation: slide 12s linear infinite;
             letter-spacing: 3px;
         }
 
@@ -76,6 +76,17 @@
             }
             to {
                 left: -100%;
+            }
+        }
+
+        @media (max-width: 991px) {
+            .sliding-text {
+                font-size: 36px;
+                letter-spacing: 2px;
+            }
+            
+            .container {
+                height: 80px;
             }
         }
 
