--- a/index.html
+++ b/index.html
@@ -66,27 +66,42 @@
                 0 0 20px rgba(255, 255, 255, 0.5),
                 0 0 40px rgba(255, 105, 180, 0.4),
                 3px 3px 10px rgba(0, 0, 0, 0.3);
-            animation: slide 12s linear infinite;
+            animation: slide-desktop 10s linear infinite;
             letter-spacing: 3px;
         }
 
-        @keyframes slide {
+        @keyframes slide-desktop {
             from {
-                left: 100%;
+                transform: translateX(100vw);
             }
             to {
-                left: -100%;
+                transform: translateX(-100%);
+            }
+        }
+
+        @keyframes slide-mobile {
+            from {
+                transform: translateX(100vw);
+            }
+            to {
+                transform: translateX(-100%);
             }
         }
 
         @media (max-width: 991px) {
             .sliding-text {
-                font-size: 36px;
-                letter-spacing: 2px;
+                font-size: 28px;
+                letter-spacing: 1px;
+                animation: slide-mobile 8s linear infinite;
             }
             
             .container {
-                height: 80px;
+                height: 60px;
+            }
+            
+            body::before,
+            body::after {
+                font-size: 40px;
             }
         }
 
