--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <div class="container">
         <div class="sliding-text">
-            💙 Hi Anna, help me find a girl with blue eyes 💙 ✨ 🌸
+            💙 One day you'll find a job closer to home and I'll find a girl with blue eyes 💙 ✨ 🌸
         </div>
     </div>
 
